--- a/style.css
+++ b/style.css
@@ -40,49 +40,84 @@ button::-moz-focus-inner {
 
 /*---------------------*/
 
-main {
-    padding-left: 20px;
-    padding-top: 20px;
+body {
+    overflow-x: hidden;
+    background-color: #000;
 }
 
+main {
+    padding: 50px;
+}
+/* Inputs */
 .inputs {
     margin-bottom: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .input__task {
-    height: 30px;
-    padding-left: 5px;
+    height: 40px;
+    width: 400px;
+    border: 1px solid #000;;
+    border-radius: 25px;
+    padding-left: 20px;
+    margin-bottom: 10px;
     font-size: 18px;
+    font-family: "Noto Sans", serif;
     user-select: none;
 }
 
 .add__task {
     border: 1px solid #c5c2c2;
-    border-radius: 30%;
-    width: 40px;
-    height: 30px;
-    font-size: 18px;
-    background-color: #c5c2c2;
+    border-radius: 25px;
+    width: 400px;
+    height: 40px;
+    font-size: 22px;
+    font-family: "Noto Sans", serif;
+    color: #000;
+    background-color: #fff;
     user-select: none;
 }
 
 /*Задания*/
 
 .tasks {
+    border: 1px solid #000;
+    background-color: #ffffff;
+    border-radius: 25px;
+    padding: 10px;
+    min-height: 100px;
+    margin-bottom: 20px;
+}
 
+.tasks__title {
+    font-family: "Noto Sans", serif;
+    margin-bottom: 10px;
+}
+
+.success__title {
+    font-family: "Noto Sans", serif;
+    margin-bottom: 10px;
 }
 
 .task {
     border: 1px solid #000;
+    border-radius: 25px;
+    padding: 5px 10px 5px 10px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
     gap: 20px;
     height: 30px;
     margin-bottom: 10px;
 }
 
 .task p {
-    font-size: 18px;
+    font-size: 20px;
+    color: #000;
+    font-family: "Noto Sans", serif;
 }
 
 .task button {
@@ -94,13 +129,34 @@ main {
     transform: scale(1.3);
 }
 
+.delete__btn {
+    border: 1px solid #000;
+    color: #ffffff;
+    background-color: #000;
+    border-radius: 25px;
+    padding: 2px 10px 2px 10px;
+    font-family: "Noto Sans", serif;
+}
+
+.checkbox__task {
+    transform:scale(1.9);
+}
+
+.task__btns {
+    min-width: 120px;
+    display: flex;
+    justify-content: space-between;
+}
+
 /*Выполненные задания*/
 
 .success__task {
-    border-left: 1px dotted black;
-    border-top: 1px dotted black;
+    border: 1px solid #000;
+    background-color: #ffffff;
+    border-radius: 25px;
     min-height: 50px;
-    padding-left: 10px;
-    padding-top: 10px;
+    padding: 10px;
     
 }
+
+
